<resources>
    <string name="app_name">Calculator</string>
    <string name="divide_symbol">/</string>
    <string name="back_symbol">b</string>
    <string name="menu_about">О программе</string>
    <string name="menu_calc_type">Вид</string>
    <string name="menu_calc_simple">Обычный</string>
    <string name="menu_calc_financial">Конвертер валют</string>
    <string name="menu_exit">выход</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="tab_calc">Рассчёт</string>
    <string name="tab_exchange">Курсы</string>
    <string name="operator_add">Add</string>
    <string name="operator_multiply">Multiply</string>
    <string name="operator_subtract">Subtract</string>
    <string name="operator_division">Division</string>
    <string name="operator_equal">Equal</string>
    <string name="button_request">Запрос курсов</string>
    <string name="usd">1 USD = </string>
    <string name="eur">1 EUR = </string>
    <string name="cny">1 CNY = </string>
    <string name="rub">RUB</string>
    <string-array name="money_symbols">
        <item>USD</item>
        <item>RUB</item>
        <item>CNY</item>
        <item>EUR</item>
    </string-array>
</resources>
