<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewmodel"
                  type="com.example.calculator.ui.financialfragment.financialexchangefragment.FinancialExchangeFragmentViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextUSD"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                android:id="@+id/textView"/>
        <TextView
                android:text="@string/eur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextEUR"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                android:id="@+id/textView2"/>
        <TextView
                android:text="@string/cny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextCNY"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/textView3"/>

        <EditText
                android:id="@+id/editTextUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintBottom_toTopOf="@+id/editTextEUR"/>
        <EditText
                android:id="@+id/editTextEUR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                app:layout_constraintTop_toBottomOf="@+id/editTextUSD"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintBottom_toTopOf="@+id/editTextCNY"
                app:layout_constraintEnd_toStartOf="@+id/textView6"/>
        <EditText
                android:id="@+id/editTextCNY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="6"
                app:layout_constraintTop_toBottomOf="@+id/editTextEUR"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView7"/>

        <TextView
                android:id="@+id/textView5"
                android:text="@string/rub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editTextUSD"
                app:layout_constraintBottom_toTopOf="@+id/textView6"/>
        <TextView
                android:id="@+id/textView6"
                android:text="@string/rub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/editTextEUR"/>
        <TextView
                android:id="@+id/textView7"
                android:text="@string/rub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/editTextCNY"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/button_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextCNY"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>